<?xml version="1.0" encoding="utf-8"?>
<resources>

    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>

    <plurals name="dislikes_count">
        <item quantity="one">%d dislike</item>
        <item quantity="other">%d dislikes</item>
    </plurals>


    <string name="app_name">Red</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_foundation">基底</string>
    <string name="action_settings_blush">脸颊</string>
    <string name="action_settings_eyebrows">睫毛</string>
    <string name="action_settings_eyeshadow">眼影</string>
    <string name="action_settings_lipgloss">唇膏</string>
    <string name="tab1">tab1</string>
    <string name="tab2">tab2</string>
    <string name="tab3">tab3</string>

    <string name="tab_selection_discover">发现</string>
    <string name="tab_selection_note">彩妆笔记</string>

    <string name="tab_home">主页</string>
    <string name="tab_color">色调</string>
    <string name="tab_idea">灵感</string>
    <string name="tab_testlib">测试库</string>
    <string name="tab_peoper_nearby">附近的Reder</string>
    <string name="tab_person">个人</string>
    <string name="tab_moments">朋友圈</string>
    <string name="tab_makeuplib">妆库</string>
    <string name="tab_property">档案</string>
    <string name="tab_note">笔记</string>

    <string name="tab_theme">更换主题</string>
    <string name="tab_setting">设置</string>

    <string name="lib_provide">实验室提供</string>
    <string name="lipstick">口红系列</string>
    <string name="makeup">粉底系列</string>

    <string name="dislike_dlg_lable_speech">读文章</string>
    <string name="favorite_btn_delete">删除</string>
    <string name="favorite_btn_edit">编辑</string>
    <string name="favorite_btn_cancel">取消</string>
    <string name="label_cancel_dislike">撤消</string>

    <string name="ss_pattern_update">发现%1$d条更新</string>
    <string name="retry_large_image"><u>加载失败，点击重试</u></string>

    <string name="drawer_btn_rss">频道管理</string>
    <string name="city_category_list_header">点击选择其他城市</string>
    <string name="city_category_list_hint">选择城市，立即查看本地新闻</string>
    <string name="city_category_list_notify_no_city">请先选择您关注的城市</string>

    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>

    <string name="question1">你现在时尚功底有多厚?</string>
    <string name="question2">你在什么场合希望好好地化妆打扮？</string>
    <string name="question3">当你伸出手臂看你手腕处静脉</string>
    <string name="question4">穿黄色或者橘色的衣服拍张照片（请一定真的这样做），你看起来气色如何？ </string>
    <string name="question5">如果你不涂防晒霜就出门，你的皮肤会怎样？</string>
    <string name="question6">下面哪个时尚风格是你最喜欢的？</string>
    <string name="question7">请排序对你最重要的化妆品种类</string>
    <string name="question8">你现在最需要有人帮你！</string>

    <string name="yes">确认</string>
    <string name="cancel">取消</string>

    <string name="rate">评分</string>
    <string name="total_rate">综合评分</string>
    <string name="wrap">外包装</string>
    <string name="runze">滋润度</string>
    <string name="baohe">颜色饱和度</string>
    <string name="yanzhan">延展度</string>
    <string name="chijiu">颜色持久度</string>

    <string name="lip_try">嘴唇试色</string>
    <string name="color_board">色板</string>

    <string name="comment_rate_all">评价这个系列产品</string>
    <string name="comment_color">颜色/质地</string>
    <string name="comment_rate_single">评价这个单品的感性印象</string>
    <string name="comment_place">场合/推荐</string>
    <string name="people_look">人查看</string>
    <string name="no_data">没有数据</string>

    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="search">搜索</string>
    <string name="more">更多</string>
    <string name="general_settings">常规</string>
    <string name="other">其他</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="give_favor">给应用点赞</string>
    <string name="share_to_friends">分享给朋友们</string>
    <string name="show_note_history_log">显示笔记全部操作记录</string>
    <string name="sync">同步</string>
    <string name="show_note_history_log_summary">开启显示笔记全部操作记录，将显示笔记所有的操作记录，否则只显示最新的操作记录</string>
    <array name="drawer_content">
        <item>口红笔记</item>
        <item>彩妆笔记</item>
        <item>其他笔记</item>
        <item>回收站</item>
    </array>
    <string name="note_log_text" formatted="false">%s\u0020:\u0020%s</string>
    <string name="edit">编辑</string>
    <string name="move_to_trash">移至回收站</string>
    <string name="delete_forever">永久删除</string>
    <string name="right_hand_mode">右手操作模式</string>
    <string name="right_hand_mode_summary">开启右手操作模式，侧边栏将从右边划开，默认从左边划开</string>
    <string name="sure">确定</string>
    <string name="delete_forever_message">是否要永久地删除了该条笔记</string>
    <string name="done">完成</string>
    <string name="label">标签</string>
    <string name="note_content">笔记内容</string>
    <string name="new_note">新的笔记</string>
    <string name="search_note">搜索笔记</string>
    <string name="search_tag">搜索标签</string>
    <string name="edit_note">编辑笔记</string>
    <string name="view_note">查看笔记</string>
    <string name="show_note_history_log_key">show_note_history_log_key</string>
    <string name="right_hand_mode_key">right_hand_mode_key</string>
    <string name="move_success">成功移除</string>
    <string name="recover">恢复</string>
    <string name="create">创建</string>
    <string name="advice_feedback_key">advice_feedback_key</string>
    <string name="no_email_app_tip">请先安装邮件应用并设置账户,或直接发送邮件至 kkooff114@gmail.com</string>
    <string name="choose_account">请选择账号</string>
    <string name="sync_account">同步账号</string>
    <string name="sync_account_key">sync_account_key</string>
    <string name="no_account_tip">请在手机设置中添加一个有效的邮箱账号</string>
    <string name="multi_account_tip">您的有效邮箱账号多于一个，请在设置中选择</string>
    <string name="multi_account_choose_tip">您的有效邮箱账号多于一个，请点击选择</string>
    <string name="syncing">正在后台同步中</string>
    <string name="sync_success">同步成功</string>
    <string name="sync_fail">同步失败，建议在网络好的时候进行同步</string>
    <string name="pay_for_me_title">觉得不错，随意打赏</string>
    <string name="jianshu_blog">简书博客</string>
    <string name="project_home">项目主页</string>
    <string name="pay_for_me_tip">如果觉得极简笔记对您有用，请随意打赏。</string>
    <string name="pay_for_me">随意打赏</string>
    <string name="pay_for_me_key">pay_for_me_key</string>
    <string name="recycle_bin">回收站</string>
    <string name="move_to">移回</string>
    <string name="give_favor_key">give_favor_key</string>
    <string name="card_note_item_layout">卡片式笔记</string>
    <string name="card_note_item_layout_key">card_note_item_layout_key</string>
    <string name="not_save_note_leave_tip">笔记已经发生变化，是否保存后再离开</string>
    <string name="change_theme">更换主题</string>
    <string name="change_theme_key">change_theme_key</string>
    <string name="today" formatted="false">今天\u0020%s</string>
    <string name="before_day" formatted="false">%d\u0020天前</string>
    <string name="before_month" formatted="false">%d\u0020个月前</string>
    <string name="before_year" formatted="false">%d\u0020年前</string>
    <string name="share_text" formatted="false">极简笔记简洁好用，推荐你也来用用 %s\u0020%s</string>
    <string name="download_url" >下载地址</string>
    <string name="share">分享到</string>
    <string name="not_install_app">请先安装相应客户端</string>
    <array name="share_dialog_text">
        <item>微信好友</item>
        <item>微信朋友圈</item>
        <item>微信收藏</item>
        <item>新浪微博</item>
        <item>更多</item>
    </array>

    <string name="tag">标签</string>

    <string name="at_want_delete">您要删除当前标签吗 ？</string>
    <string name="at_ok">确定</string>
    <string name="at_cancel">取消</string>
    <!-- 图片处理 -->
    <string name="crop_next_text">下一步</string>
    <string name="crop_rotate_text">旋转</string>
    <string name="crop_cancel_text">取消</string>
    <string name="runningFaceDetection">请稍后...</string>
    <string name="at_tag_info">添加标签</string>



</resources>
