<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    style="@style/cardViews">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/lib_comment_head_1"
            android:text="@string/comment_rate_all" />

        <TextView
            android:id="@+id/tv_comment_all"
            style="@style/lib_comment_head_2" />

        <TextView
            style="@style/lib_comment_head_1"
            android:text="@string/comment_rate_single" />

        <TextView
            android:id="@+id/tv_comment_single"
            style="@style/lib_comment_head_2" />

        <TextView
            style="@style/lib_comment_head_1"
            android:text="@string/comment_color" />

        <TextView
            android:id="@+id/tv_comment_color"
            style="@style/lib_comment_head_2" />

        <TextView
            style="@style/lib_comment_head_1"
            android:text="@string/comment_place" />

        <TextView
            android:id="@+id/tv_comment_place"
            style="@style/lib_comment_head_2" />


    </LinearLayout>
</android.support.v7.widget.CardView>