<?xml version="1.0" encoding="UTF-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_gray"
        android:orientation="vertical">

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />


        <RadioGroup
            android:id="@+id/main_tab_group"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingTop="5dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/main_tab_color"
                style="@style/MMTabButton"
                android:layout_weight="1.0"
                android:checked="true"
                android:drawableTop="@drawable/bg_checkbox_menus_color"
                android:text="@string/tab_color" />


            <RadioButton
                android:id="@+id/main_tab_idea"
                style="@style/MMTabButton"
                android:layout_weight="1.0"
                android:drawableTop="@drawable/bg_checkbox_menus_idea"
                android:text="@string/tab_idea" />


            <RadioButton
                android:id="@+id/main_tab_testlib"
                style="@style/MMTabButton"
                android:layout_weight="1.0"
                android:drawableTop="@drawable/bg_checkbox_menus_testlib"
                android:text="@string/tab_testlib" />


            <RadioButton
                android:id="@+id/main_tab_property"
                style="@style/MMTabButton"
                android:layout_weight="1.0"
                android:drawableTop="@drawable/bg_checkbox_menus_property"
                android:text="@string/tab_property" />

        </RadioGroup>


    </LinearLayout>

</TabHost>